--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY"/>
+            android:value="AIzaSyD5OeXsFVi9m30L6csYEbF8xe7NEz8lnhU"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
