--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation "com.google.android.gms:play-services-location:16.0.0"
     implementation "com.google.android.gms:play-services-places:16.0.0"
-
+    implementation 'com.google.firebase:firebase-firestore:16.0.0'
     implementation 'com.google.firebase:firebase-database:16.0.1'
 }
