Implemented an alternative map on MapFragment java file. Need to click on "Current Location" (top right of screen) to move there.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         applicationId 'com.getcivix.app'
         minSdkVersion 15
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -40,4 +41,5 @@ dependencies {
     implementation "com.google.android.gms:play-services-places:16.0.0"
     implementation 'com.google.firebase:firebase-firestore:16.0.0'
     implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.android.support:multidex:1.0.3'
 }
