--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:16.0.0'
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
